src-ken&y/objects/Process_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for Kenandy processing in this organization</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identify this setting is active and in use to specify behavior or not</description>
        <inlineHelpText>.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Name of the field that controls this process</description>
        <inlineHelpText>.</inlineHelpText>
        <label>Field Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <description>The value that will control execution of this process step</description>
        <inlineHelpText>.</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Value__c</fullName>
        <description>This field is used to check against the Line Type attribute.</description>
        <label>Line Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Name of the Object this process is attached to</description>
        <inlineHelpText>.</inlineHelpText>
        <label>Object Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Process Configuration</label>
</CustomObject>